<resources>
    <string name="app_name">MachineTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="login">Login</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="privacy_terms">
    By continuing you accept our
    &lt;u&gt;&lt;b&gt;Privacy Policy&lt;/b&gt;&lt;/u&gt; and
    &lt;u&gt;&lt;b&gt;Terms of Use&lt;/b&gt;&lt;/u&gt;.
</string>
    <string name="dont_have_acc">Don’t have an account?</string>
    <string name="signup">Sign Up</string>



</resources>