<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".presentation.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="@dimen/_15sdp"

        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/item_shape"
            android:hint="@string/email_address"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/text_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo" />



        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:src="@drawable/ic_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/llPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/item_shape"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/edtEmail"
            app:layout_constraintStart_toStartOf="@+id/edtEmail"
            app:layout_constraintTop_toBottomOf="@+id/edtEmail">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/_10sdp"
                android:textColorHint="@color/text_grey" />

            <ImageView
                android:id="@+id/ivTogglePassword"
                android:layout_width="0dp"
                android:layout_height="@dimen/_14sdp"
                android:layout_weight="0.1"
                android:contentDescription="Toggle Password Visibility"
                android:src="@drawable/ic_eye_off_fill" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvSignin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/black_button"
            app:layout_constraintStart_toStartOf="@+id/llPassword"
            app:layout_constraintTop_toBottomOf="@+id/llPassword"
            android:text="@string/sign_in"
            android:textSize="@dimen/_14ssp"
            android:gravity="center"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/llPassword"
            />

        <LinearLayout
            android:id="@+id/llDivider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:orientation="horizontal"
            android:layout_marginVertical="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="@+id/tvSignin"
            app:layout_constraintEnd_toEndOf="@+id/tvSignin"
            app:layout_constraintTop_toBottomOf="@+id/tvSignin"
            android:gravity="center_vertical">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#DDDDDD" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:text="OR"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#DDDDDD" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/llFacebook"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="@+id/llDivider"
            app:layout_constraintTop_toBottomOf="@+id/llDivider"
            app:layout_constraintEnd_toEndOf="@+id/llDivider"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/blue_button"
            android:gravity="center"
            android:layout_height="@dimen/_40sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_facebook"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:text="@string/continue_with_facebook"
                />


        </LinearLayout>
        <LinearLayout
            android:id="@+id/llgoogle"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="@+id/llFacebook"
            app:layout_constraintTop_toBottomOf="@+id/llFacebook"
            app:layout_constraintEnd_toEndOf="@+id/llFacebook"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/black_border_button"
            android:gravity="center"
            android:layout_height="@dimen/_40sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_google"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:text="@string/continue_with_google"
                />


        </LinearLayout>



        <TextView
            android:id="@+id/tvPrivacyTerms"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="@+id/llgoogle"
            app:layout_constraintTop_toBottomOf="@+id/llgoogle"
            app:layout_constraintEnd_toEndOf="@+id/llgoogle"
            android:text="@string/privacy_terms"
            android:textColor="@color/black"
            android:paddingHorizontal="@dimen/_20sdp"
            android:gravity="center"
            />


        <LinearLayout
            android:id="@+id/tvSignUpPrompt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@+id/tvPrivacyTerms"
            app:layout_constraintEnd_toEndOf="@+id/tvPrivacyTerms"
            app:layout_constraintTop_toBottomOf="@+id/tvPrivacyTerms"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:gravity="center"
                android:text="@string/dont_have_acc"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/_13ssp"
                android:layout_marginEnd="@dimen/_2sdp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:gravity="center"
                android:text="@string/signup"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"

                />

        </LinearLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>